--- a/weixin/rewrite-unlock-url.conf
+++ b/weixin/rewrite-unlock-url.conf
@@ -1,4 +1,4 @@
-// source: https://raw.githubusercontent.com/ddgksf2013/Rewrite/master/Function/UnblockURLinWeChat.conf
+# source: https://raw.githubusercontent.com/ddgksf2013/Rewrite/master/Function/UnblockURLinWeChat.conf
 
 hostname = weixin110.qq.com, security.wechat.com
 
