--- a/reddit/rewrite-ad-block.conf
+++ b/reddit/rewrite-ad-block.conf
@@ -1,4 +1,5 @@
 # source: https://github.com/Zz1xuan/ONE/blob/main/Loon/plugin/Reddit.plugin
-hostname = gql.reddit.com
+hostname = gql.reddit.com gql-fed.reddit.com
 
-^https?:\/\/gql\.reddit\.com url script-response-body https://raw.githubusercontent.com/Zz1xuan/ONE/main/Script/AD/reddit.js
+^https?:\/\/gql\.reddit\.com url script-response-body https://raw.githubusercontent.com/272548/assets/main/reddit/response-body-ad-block.js
+^https?:\/\/gql-fed\.reddit\.com url script-response-body https://raw.githubusercontent.com/272548/assets/main/reddit/response-body-ad-block.js
